--- a/Tennis.ipynb
+++ b/Tennis.ipynb
@@ -17,11 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip -q install ./python"
+    "#!pip -q install ./python"
    ]
   },
   {
@@ -33,37 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:unityagents:\n",
-      "'Academy' started successfully!\n",
-      "Unity Academy name: Academy\n",
-      "        Number of Brains: 1\n",
-      "        Number of External Brains : 1\n",
-      "        Lesson number : 0\n",
-      "        Reset Parameters :\n",
-      "\t\t\n",
-      "Unity brain name: TennisBrain\n",
-      "        Number of Visual Observations (per agent): 0\n",
-      "        Vector Observation space type: continuous\n",
-      "        Vector Observation space size (per agent): 8\n",
-      "        Number of stacked Vector Observation: 3\n",
-      "        Vector Action space type: continuous\n",
-      "        Vector Action space size (per agent): 2\n",
-      "        Vector Action descriptions: , \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from unityagents import UnityEnvironment\n",
     "import numpy as np\n",
     "\n",
-    "env = UnityEnvironment(file_name=\"/data/Tennis_Linux_NoVis/Tennis\")"
+    "env = UnityEnvironment(file_name=\"data/Tennis_Linux_NoVis/Tennis\")"
    ]
   },
   {
@@ -81,7 +58,8 @@
    "source": [
     "# get the default brain\n",
     "brain_name = env.brain_names[0]\n",
-    "brain = env.brains[brain_name]"
+    "brain = env.brains[brain_name]\n",
+    "print(brain_name)"
    ]
   },
   {
@@ -134,22 +112,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(5):                                         # play game for 5 episodes\n",
-    "    env_info = env.reset(train_mode=False)[brain_name]     # reset the environment    \n",
-    "    states = env_info.vector_observations                  # get the current state (for each agent)\n",
-    "    scores = np.zeros(num_agents)                          # initialize the score (for each agent)\n",
-    "    while True:\n",
-    "        actions = np.random.randn(num_agents, action_size) # select an action (for each agent)\n",
-    "        actions = np.clip(actions, -1, 1)                  # all actions between -1 and 1\n",
-    "        env_info = env.step(actions)[brain_name]           # send all actions to tne environment\n",
-    "        next_states = env_info.vector_observations         # get next state (for each agent)\n",
-    "        rewards = env_info.rewards                         # get reward (for each agent)\n",
-    "        dones = env_info.local_done                        # see if episode finished\n",
-    "        scores += env_info.rewards                         # update the score (for each agent)\n",
-    "        states = next_states                               # roll over states to next time step\n",
-    "        if np.any(dones):                                  # exit loop if episode finished\n",
-    "            break\n",
-    "    print('Total score (averaged over agents) this episode: {}'.format(np.mean(scores)))"
+    "# for i in range(5):                                         # play game for 5 episodes\n",
+    "#     env_info = env.reset(train_mode=False)[brain_name]     # reset the environment    \n",
+    "#     states = env_info.vector_observations                  # get the current state (for each agent)\n",
+    "#     scores = np.zeros(num_agents)                          # initialize the score (for each agent)\n",
+    "#     while True:\n",
+    "#         actions = np.random.randn(num_agents, action_size) # select an action (for each agent)\n",
+    "#         actions = np.clip(actions, -1, 1)                  # all actions between -1 and 1\n",
+    "#         env_info = env.step(actions)[brain_name]           # send all actions to tne environment\n",
+    "#         next_states = env_info.vector_observations         # get next state (for each agent)\n",
+    "#         rewards = env_info.rewards                         # get reward (for each agent)\n",
+    "#         dones = env_info.local_done                        # see if episode finished\n",
+    "#         scores += env_info.rewards                         # update the score (for each agent)\n",
+    "#         states = next_states                               # roll over states to next time step\n",
+    "#         if np.any(dones):                                  # exit loop if episode finished\n",
+    "#             break\n",
+    "#     print('Total score (averaged over agents) this episode: {}'.format(np.mean(scores)))"
    ]
   },
   {
@@ -165,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env.close()"
+    "# env.close()"
    ]
   },
   {
@@ -182,13 +160,22 @@
     "- To structure your work, you're welcome to work directly in this Jupyter notebook, or you might like to start over with a new file!  You can see the list of files in the workspace by clicking on **_Jupyter_** in the top left corner of the notebook.\n",
     "- In this coding environment, you will not be able to watch the agents while they are training.  However, **_after training the agents_**, you can download the saved model weights to watch the agents on your own machine! "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.reset(train_mode=True)[brain_name]\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "drlnd",
    "language": "python",
-   "name": "python3"
+   "name": "drlnd"
   },
   "language_info": {
    "codemirror_mode": {
@@ -200,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
